--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@tailwindcss/forms": "^0.5.10",
     "@vueuse/core": "^13.9.0",
     "aos": "^2.3.4",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "country-flag-emoji": "^1.0.3",
     "lucide-vue-next": "^0.544.0",
-    "pinia": "^3.0.3",
+    "notivue": "^2.4.5",
+    "pinia": "^3.0.4",
     "vue": "^3.4.38",
     "vue-i18n": "^9.14.5",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^24.6.2",
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.5.3",
