--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:3305/api
-#VITE_API_BASE_URL=https://domains-api.reliancewestafrica-hr.com/api
+#VITE_API_BASE_URL=http://localhost:3305/api
+VITE_API_BASE_URL=https://domains-api.reliancewestafrica-hr.com/api
