--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "start": "npm run dev --port 5175",
+    "dev": "vite --host",
+    "start": "npm run dev --port 5175 --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@uppy/core": "^5.2.0",
+    "@uppy/dashboard": "^5.1.0",
+    "@uppy/tus": "^5.1.0",
+    "@uppy/xhr-upload": "^5.1.1",
     "@vueuse/core": "^13.9.0",
+    "ant-design-vue": "^4.2.6",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
