--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_API_BASE_URL=http://localhost:3305/api
 #VITE_API_BASE_URL=https://api-domains.rwa-core.com/api
+#VITE_API_UPLOAD_URL=http://77.37.121.56:3020/upload
+VITE_API_UPLOAD_URL=https://upload-domains.rwa-core.com/upload
