--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vue": "^3.4.38",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
